--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Press Start 2P', cursive;
 }
 
 #main {
@@ -9,6 +10,7 @@
   /* This will inherit the width and height of its immediate children */
   display: inline-block;
 }
+
 header {
   position: absolute;
   display: flex;
@@ -24,48 +26,75 @@ header {
   /* justify-content only works when display is set to flex */
   justify-content: flex-end;
   width: 100%;
-  height: 30px;
+  border-top: 4px solid white;
+  border-bottom: 4px solid white;
+  border-left: 4px solid white;
 }
+
 #leftHealth #lostHealth {
-  background-color: yellow;
+  background-color: red;
   height: 30px;
   width: 100%;
 }
+
 #leftHealth #remainingHealth {
   position: absolute;
-  background-color: blue;
+  background-color: #818cf8;
   top: 0;
   bottom: 0;
   right: 0;
   width: 100%;
 }
-#leftHealth {
-  background-color: yellow;
-  height: 30px;
-  width: 100%;
-}
+
 #timer {
   flex-shrink: 0;
-  background-color: maroon;
-  height: 100px;
+  background-color: black;
+  color: white;
+  height: 50px;
   width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid white;
+
 }
 
 #rightHealth {
   position: relative;
   width: 100%;
-  height: 30px;
+  border-top: 4px solid white;
+  border-bottom: 4px solid white;
+  border-right: 4px solid white;
+
 }
+
 #rightHealth #lostHealth {
   background-color: yellow;
   height: 30px;
   width: 100%;
 }
+
 #rightHealth #remainingHealth {
   position: absolute;
-  background-color: blue;
+  background-color: #818cf8;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+#announceWinner {
+  /* by using absolute and setting the top, bottom, left  and right to 0 */
+  /* this div will take up the size of its parent */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  color: white;
+  display: none;
+  align-items: center;
+  justify-content: center;
+
 }
